apps/longhorn/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k8s.nickolaj.com`)
      kind: Rule
      middlewares:
      - name: traefik-basic-auth
      - name: traefik-forwardauth
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-cert
